force-app/main/default/objects/Custom_Rollup_Config__mdt/Custom_Rollup_Config__mdt.object-meta.xml
<CustomObject>
    <description>Custom lookup rollup configuration</description>
    <label>Custom Rollup Config</label>
    <pluralLabel>Custom Rollup Config</pluralLabel>
</CustomObject>