force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Name__c</fullName>
    <description>Specify the name of the object that contains the field whose value will be rolled up</description>
    <label>Child Object Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>