force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Describe what kind of data the aggregated field will have (this is to prevent possible fatal error in cases such as when attempting to zero the field and the field is of Date type)</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATE</fullName>
                <default>true</default>
                <label>DATE</label>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>NUMERIC</fullName>
                <label>(Obsolete) NUMERIC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>