force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Filter_Criteria_1__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_1__c</fullName>
    <description>If we have an extra criteria for this Custom Rollup to activate itself, put the criteria here in SOQL WHERE format (omit the WHERE itself, only include the syntax following it)</description>
    <label>Filter Criteria 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>