force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Filter_Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_2__c</fullName>
    <label>Filter Criteria 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>