force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Filter_Criteria_3__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria_3__c</fullName>
    <label>Filter Criteria 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>