force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>