force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Master_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Field_Name__c</fullName>
    <description>Specify the name of the field upon which the rollup value will be aggregated on</description>
    <label>Master Object Field Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>