force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <description>Specify the name of the master object that contains the field where the rollup aggregate value will be placed</description>
    <label>Master Object Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>