force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Parent_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Relationship_Field__c</fullName>
    <description>Specify the name of the lookup field etc that links the child object with the parent object</description>
    <label>Parent Relationship Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>