force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Rollup_Condition_Formula_1__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Condition_Formula_1__c</fullName>
    <description>Formula to validate the condition to rollup to its parent record</description>
    <inlineHelpText>Formula to validate the condition to rollup to its parent record</inlineHelpText>
    <label>Rollup Condition Formula 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>