force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Rollup_Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Condition_Logic__c</fullName>
    <label>Rollup Condition Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>