force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Rollup_Type__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Type__c</fullName>
    <description>Specify the type of rollup</description>
    <label>Rollup Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
                <default>true</default>
                <label>COUNT</label>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>