force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Sequence2__c.field-meta.xml
<CustomField>
    <fullName>Sequence2__c</fullName>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>