force-app/main/default/objects/Custom_Rollup_Config__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>(Obsolete) Sequence</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>