force-app/main/default/objects/Custom_Rollup_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Master_Object_Name__c</columns>
    <columns>Master_Object_Field_Name__c</columns>
    <columns>Child_Object_Name__c</columns>
    <columns>Child_Object_Field_Name__c</columns>
    <columns>Parent_Relationship_Field__c</columns>
    <columns>Rollup_Type__c</columns>
    <columns>Sequence2__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>